[package]
name = "warung-service-account-api"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
axum-test = "17.3.0"
